# beast-sensor

./: .gitignore  README.md  agile_vbt_analysis.py  agile_vbt_dashboard.py  agile_vbt_dashboard_app.py  agile_vbt_dashboard_data.py  agile_vbt_dashboard_stream.py  agile_vbt_live_display.py  agile_vbt_motion.py  agile_vbt_sensor.py  beast sensor.py  beast_analysis.py  beast_dashboard.py  beast_dashboard_app.py  beast_dashboard_data.py  beast_dashboard_stream.py  beast_live_display.py  beast_motion.py  probe_imu_characteristics.py  requirements.txt  run.ps1  setup.ps1
components/agile-vbt-live-display/: MANIFEST.in  README.md  example.py  pyproject.toml
components/agile-vbt-live-display/agile_vbt_live_display/: __init__.py  (+1 more)
components/beast-live-display/: MANIFEST.in  README.md  example.py  pyproject.toml
components/beast-live-display/beast_live_display/: __init__.py  pyproject.toml
components/beast-live-display/beast_live_display/frontend/: package-lock.json  package.json
components/beast-live-display/beast_live_display/frontend/src/: chart.test.ts  chart.ts  index.test.ts  index.ts  style.css  types.ts
tests/: test_agile_vbt_analysis.py  test_agile_vbt_cli.py  test_agile_vbt_dashboard.py  test_agile_vbt_dashboard_app.py  test_agile_vbt_dashboard_data.py  test_agile_vbt_dashboard_stream.py  test_agile_vbt_motion.py  test_beast_analysis.py  test_beast_cli.py  test_beast_dashboard.py  test_beast_dashboard_app.py  test_beast_dashboard_data.py  test_beast_dashboard_stream.py  test_beast_motion.py  test_probe_imu_characteristics.py  test_recording_regression.py
(+7 files in other folders)
