[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beast-live-display"
version = "0.0.1"
description = "Persistent WebSocket Plotly display for Beast Sensor"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Bojan", email = "noreply@example.com" }]
dependencies = ["streamlit >= 1.59.2"]

[project.optional-dependencies]
devel = [
  "wheel",
  "pytest==7.4.0",
  "playwright==1.48.0",
  "requests==2.31.0",
  "pytest-playwright-snapshot==1.0",
  "pytest-rerunfailures==12.0",
]

[tool.setuptools.packages.find]
include = ["beast_live_display*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
beast_live_display = ["frontend/build/**/*", "pyproject.toml"]
